[package]
name = "nbxdca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.22"
clap = { version = "4.0.7", features = ["cargo"] }
hmac = "0.12.1"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
toml = "0.5.9"
